implemented collision detection

--- a/game_alpha01.html
+++ b/game_alpha01.html
@@ -15,43 +15,54 @@
   <script type='text/javascript', src='Item.js'></script>
   <!-- Item Handler Class -->
   <script type='text/javascript', src='ItemHandler.js'></script>
+  <!-- Vector library -->
+  <script type='text/javascript', src='vector.js'></script>
+  <!-- Hero Class -->
+  <script type='text/javascript', src='Hero.js'></script>
 
   <canvas id="myCanvas" width="480" height="320"></canvas>
 
   <script>
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
-    var item_handler = new ItemHandler(ctx);
+    var hero = new Hero(100, canvas.height/2, 20, ctx);
+    var item_handler = new ItemHandler(hero, ctx);
 
     var score = 0;
     var lives = 3;
     var keyPressed = false;
 
+
     var offset = canvas.width + 100;
 
-    // TIMER EINBAUEN!
-    // JS can't multithread: no 2 intervals at once -> workaround
-    // setInterval(item_handler.spawnItem(offset, Math.random() * canvas.height),1000);
-
     var iter = 0;
+    var iterLimit = 100;
     item_handler.spawnItem(offset, 200);
 
     function draw() {
 
       // clear the content every iteration.
       ctx.clearRect(0,0,canvas.width, canvas.height);
+
+
       iter++;
       // time interval for spawn
-      if(iter > 100) {
-        item_handler.spawnItem(offset, Math.random() * canvas.height);
+      if(iter > iterLimit) {
+        item_handler.spawnItem(offset, getRandom(item_handler.radius, canvas.height - item_handler.radius));
         iter = 0;
+        iterLimit = getRandom(50, 200);
       }
 
       item_handler.update();
+      hero.display();
     }
 
     // frameRate every 10 miliseconds
     setInterval(draw, 10);
+
+    function getRandom(min, max) {
+      return Math.random() * (max - min) + min;
+    }
   </script>
 
 </body>
