Added motion; camera viewport missing

--- a/game_alpha01.html
+++ b/game_alpha01.html
@@ -19,6 +19,8 @@
   <script type='text/javascript', src='vector.js'></script>
   <!-- Hero Class -->
   <script type='text/javascript', src='Hero.js'></script>
+  <!-- Camera Class -->
+  <script type='text/javascript', src='Camera.js'></script>
 
   <canvas id="myCanvas" width="480" height="320"></canvas>
 
@@ -27,11 +29,11 @@
     var ctx = canvas.getContext("2d");
     var hero = new Hero(100, canvas.height/2, 20, ctx);
     var item_handler = new ItemHandler(hero, ctx);
+    var cam = new Camera(canvas, ctx, hero);
 
     var score = 0;
     var lives = 3;
     var keyPressed = false;
-
 
     var offset = canvas.width + 100;
 
@@ -40,10 +42,10 @@
     item_handler.spawnItem(offset, 200);
 
     function draw() {
-
+      // reset the transform matrix as it is cumulative
+      //ctx.setTransform(1,0,0,1,0,0);
       // clear the content every iteration.
       ctx.clearRect(0,0,canvas.width, canvas.height);
-
 
       iter++;
       // time interval for spawn
@@ -53,8 +55,10 @@
         iterLimit = getRandom(50, 200);
       }
 
-      item_handler.update();
+//      cam.update();
       hero.display();
+      //ctx.translate(hero.loc.x, 0);
+      item_handler.update();
     }
 
     // frameRate every 10 miliseconds
