--- a/game_alpha01.html
+++ b/game_alpha01.html
@@ -1,8 +1,8 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>  
     <meta charset="utf-8" />
-  <title>Gamedev Canvas Workshop</title>
+  <title>Flappy Birds Like Browser Game</title>
   <style>
     * { padding: 0; margin: 0; }
     canvas { background: #eee; display: block; margin: 0 auto; }
@@ -20,28 +20,56 @@
   <!-- Hero Class -->
   <script type='text/javascript', src='Hero.js'></script>
 
-  <canvas id="myCanvas" width="480" height="320"></canvas>
+  <canvas id="myCanvas" width="800" height="640"></canvas>
 
   <script>
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
     var game = new GameHandler(ctx, canvas);
+    var pause = false;
+    var flap = false;
+    var flapTime = 15;
+    var flapElapsed = 0;
     window.addEventListener('keydown', this.userInput, false);
 
     function draw() {
-      // clear the content every iteration.
-      ctx.clearRect(0,0,canvas.width, canvas.height);
+      if (!pause) {
+        // clear the content every iteration.
+        ctx.clearRect(0,0,canvas.width, canvas.height);
+        game.update();
+      } else {
+        renderPause();
+      }
+      flapElapsed++;
+      if (flapElapsed > flapTime) {
+        flap = false;
+        flapElapsed = 0;
+      }
 
-      game.update();
     }
 
     // frameRate every 10 miliseconds
     setInterval(draw, 30);
 
+    function renderPause() {
+        ctx.font = "30px Arial";
+        ctx.fillStyle = "#4dd2ff";
+        ctx.textAlign = "center";
+        ctx.fillText("PAUSE", canvas.width/2, canvas.height/2);
+      }
+
+
     function userInput(e) {
-      game.hero.velo = new Vector2D(0,0);
-      // up force
-      game.hero.applyForce(new Vector2D(0, -50));
+      // press space bar
+      if(e.keyCode == 32 && !flap) {
+        game.hero.velo = new Vector2D(0,0);
+        // up force
+        game.hero.applyForce(game.upforce);
+        flap = true;
+      }
+      else if (e.keyCode == 80) {
+        pause = !pause;
+      }
     }
 
   </script>
