Under construction / refactoring

--- a/game_alpha01.html
+++ b/game_alpha01.html
@@ -10,33 +10,72 @@
 </head>
 <body>
   <!-- Java class construct -->
-  <script type='text/javascript', src='java_class.js'></script>
+  <!-- <script type='text/javascript', src='java_class.js'></script> -->
   <!-- Items to Pick up -->
-  <script type='text/javascript', src='Item.js'></script>
+  <!-- <script type='text/javascript', src='Item.js'></script> -->
   <!-- Item Handler Class -->
-  <script type='text/javascript', src='GameHandler.js'></script>
+  <!-- <script type='text/javascript', src='GameHandler.js'></script> -->
   <!-- Vector library -->
   <script type='text/javascript', src='vector.js'></script>
   <!-- Hero Class -->
-  <script type='text/javascript', src='Hero.js'></script>
+  <!-- <script type='text/javascript', src='Hero.js'></script> -->
+
+  <script type='text/javascript', src='GameObject.js'></script>
 
   <canvas id="myCanvas" width="800" height="640"></canvas>
 
   <script>
     var canvas = document.getElementById("myCanvas");
     var ctx = canvas.getContext("2d");
-    var game = new GameHandler(ctx, canvas);
+    //var game = new GameHandler(ctx, canvas);
     var pause = false;
     var flap = false;
     var flapTime = 15;
     var flapElapsed = 0;
     window.addEventListener('keydown', this.userInput, false);
 
+
+    function Hero() {};
+    Hero.prototype = new GameObject('#FF0000', new Vector2D(canvas.width/2, canvas.height/2), 10, 10);
+
+    var force = new Vector2D(0,0);
+
+    Hero.prototype.wrap = function() {
+      this.velocity = -this.velocity;
+    }
+
+    Hero.prototype.update = function(force) {
+      var f = new Vector2D(0, force.y);
+      GameObject.prototype.update.call(this, f);
+      // return wrap() is inconvinient!
+      return this.outOfBounds()? this.wrap() : this.location;
+    }
+
+    var canvasOffset = canvas.width + 20;
+    var randomHeight = 50;
+    function Item() {};
+    Item.prototype = new GameObject('#FF0000', new Vector2D(canvasOffset, randomHeight, 10, 5));
+
+
+    Item.prototype.update = function(force) {
+      var f = new Vector2D(force.x, 0);
+      GameObject.prototype.update.call(this, f);
+      // 0 is the mark for deletion.
+      return this.outOfBounds? 0 : this.location;
+    }
+
+var h = new Hero();
+var i = new Item();
+  console.log(i.update);
+
     function draw() {
       if (!pause) {
         // clear the content every iteration.
         ctx.clearRect(0,0,canvas.width, canvas.height);
-        game.update();
+        //game.update();
+        //Hero.update(force);
+      h.update(force);
+      h.draw();
       } else {
         renderPause();
       }
@@ -62,9 +101,9 @@
     function userInput(e) {
       // press space bar
       if(e.keyCode == 32 && !flap) {
-        game.hero.velo = new Vector2D(0,0);
+//        game.hero.velo = new Vector2D(0,0);
         // up force
-        game.hero.applyForce(game.upforce);
+//        game.hero.applyForce(game.upforce);
         flap = true;
       }
       else if (e.keyCode == 80) {
